@@ -1,5 +1,6 @@
 * Changelog
 ** Unreleased 9.0.1
+  * Add ~lsp-fix-all~ command and ~lsp-fix-all-on-save~ option for ~source.fixAll~ code action support (see [[https://github.com/emacs-lsp/lsp-mode/issues/1842][#1842]])
   * Fix "Eager macro-expansion failure" errors with lsp-interface pcase patterns (see #4723)
   * Add support for [[https://github.com/Myriad-Dreamin/tinymist][Typst (Tinymist)]] language server.
   * Add support for ~just~ files through just-lsp.
